# push_swap

./: CMakeLists.txt  Makefile  check.c  check_2.c  checker.c  commands.c  find_mark.c  find_max_min.c  find_pair.c  ft_atoi.c  ft_isdigit.c  ft_split.c  ft_strlen.c  ft_strncmp.c  mini_sort.c  mini_sort_5.c  new_push_swap.c  operations.c  push_a_b.c  push_swap  push_swap.c  push_swap.h  push_swap_lists.c  test.c  utils.c  utils_2.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  ft_split.c  ft_strjoin.c  ft_strtrim.c  ft_toupper.c  libft.h
